--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hollywood Stars Live</title>
     <script>
         window.onload = function() {
-            window.location.href = "https://hollywoodstars.live/scarlett-johansson-story/";
+            window.location.href = "https://scarlett-johansson-life.vercel.app/";
         };
     </script>
 </head>
